--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.13",
     "nodemon": "^2.0.1",
     "qs": "^6.9.1",
